# Audio-Visualizer

./: CMakeLists.txt
AudioVisualizer/: CMakeLists.txt  main.cpp
AudioVisualizer/includes/BASS/: bass.h
AudioVisualizer/includes/IMGUI-DX9/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_internal.h  imgui_stdlib.cpp  imgui_stdlib.h  imgui_tables.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
